--- a/index.html
+++ b/index.html
@@ -257,14 +257,14 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="/PDM.PNG" alt="First slide">
+          <img class="d-block w-100" src="PDM.PNG" alt="First slide">
           <div class="text-center" style="margin-top: 10px;">
           <button class="btn btn-primary">Visit PDM WoodWorking</button>
         </div>
         </div>
      
         <div class="carousel-item">
-          <img class="d-block w-100" src="/phoenix.PNG" alt="Second slide">
+          <img class="d-block w-100" src="phoenix.PNG" alt="Second slide">
           <div class="text-center" style="margin-top: 10px;">
           <button class="btn btn-primary ">Visit Phoenix Card Club</button>
           </div>
