--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
           </div>
           <div class="modal-body">
               This Portfolio Webiste uses bootstrap Features such as <strong>Navbar, Carousel,Modals, Dropdowns, Accordions , Columns, Rows, Wells, Image Responsivness Classes.</strong> The Dynamic Table which filters through grades is called <strong>DataTables(jQuery).</strong>
-              <br>
-              The timeline example was followed of <strong>CSS timelines </strong> on W3 Schools. <Strong>ScrollSpy is used for creating a smooth scroll effect.</Strong>  
+          <br>
+          <br>
+        
+              The timeline example was followed of <strong>CSS timelines </strong> on W3 Schools. <Strong>ScrollSpy is used for creating a smooth scroll effect.</Strong>
+              This website is hosted on Github pages you can visit <a href="https://lukasmeiliunas.github.io/">here</a>.  
           </div>
           <div class="modal-footer">
               <button type="button" class="btn btn-primary" data-dismiss = "modal">Close</button>
