--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-  <nav class="navbar navbar-expand-sm fixed-top navbar-light ">
+  <nav class="navbar navbar-expand-sm navbar-fixed-top navbar-light ">
     <div class="container">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar1">
             <span class="navbar-toggler-icon"></span>
