--- a/index.html
+++ b/index.html
@@ -469,18 +469,24 @@
                 <ul>
                   <i class="fab fa-java"></i>
                   <i class="fab fa-html5"></i>
-                  <i class="fab fa-css3-alt"></i>              </ul>
+                  <i class="fab fa-css3-alt"></i>  
+                  <i class="fab fa-linux" aria-hidden="true"></i>
+                  <i class="fas fa-database"></i>
+                  <i class="fab fa-bootstrap"></i>
+                </ul>
          
               </div>
             </div>
           </div>
-          <div class="col ">
+          <div class="col">
             <div class="collapse multi-collapse" id="INTERESTS">
               <div class="card card-body socials">
                 <ul>
                   <i class="fas fa-futbol"></i>
                   <i class="fas fa-running"></i>
-                  <i class="fas fa-dumbbell"></i>                </ul>
+                  <i class="fas fa-dumbbell"></i>
+                  <i class="fas fa-fish"></i>
+                </ul>
               </div>
             </div>
           </div>
