--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <div class="customMarker"></div>
     <div class="expContent">
        <h3>Eddie Rockets</h3>
-       <p><span>Chef Intern 2017 January - Present</span></p>
+       <p><span>Chef 2017 January - Present</span></p>
        <p>Working as part of a team to deliver the highest quality food in the fastest of times.</p>   
  </div>
 
